# book-building-knowledge-graphs-ja

./: .gitignore  README.md  pyproject.toml
appendix/: amazon_google_product_entity_resolution.ipynb
example/chapter10/: 10-1.cypher  10-10.cypher  10-11.cypher  10-12.cypher  10-13.cypher  10-14.cypher  10-15.cypher  10-16.cypher  10-17.cypher  10-18.cypher  10-19.cypher  10-2.cypher  10-20.cypher  10-21.cypher  10-22.cypher  10-23.cypher  10-3.cypher  10-4.cypher  10-5.cypher  10-6.cypher  10-7.cypher  10-8.cypher  10-9.cypher
example/chapter11/: 11-1.sql  11-10.cypher  11-12.cypher  11-13.cypher  11-14.cypher  11-15.cypher  11-17.cypher  11-18.cypher  11-19.cypher  11-2.cypher  11-21.cypher  11-3.cypher  11-4.csv  11-5.cypher  11-6.cypher  11-8.cypher
example/chapter12/: 12-1.py  12-10.cypher  12-11.cypher  12-12.cypher  12-13.py  12-15.ttl  12-16.cypher  12-17.cypher  12-18.cypher  12-19.cypher  12-20.cypher  12-21.cypher  12-3.py  12-4.cypher  12-5.cypher  12-6.cypher  12-7.cypher  12-8.cypher  12-9.cypher
example/chapter13/: 13-1.py  13-11.cypher  13-12.cypher  13-14.cypher  13-16.ttl  13-17.cypher  13-18.cypher  13-19.ttl  13-20.ttl  13-21.cypher  13-23.py  13-24.cypher  13-25.cypher  13-26.cypher  13-27.cypher  13-28.cypher  13-29.cypher  13-3.py  13-30.py  13-32.cypher  13-33.cypher  13-34.py  13-35.cypher  13-36.cypher  13-37.py  13-38.cypher  13-39.cypher  13-4.cypher  13-40.cypher  13-6.py  13-7.py  13-8.cypher  13-9.cypher
example/chapter3/: 3-1.cypher  3-2.cypher  3-3.cypher  3-4.cypher  3-5.cypher  3-6.cypher  3-7.cypher  3-8.cypher  3-9.cypher
(+90 files in other folders)
